--- a/src/app/main/utility-components/propagator-utility/propagator-utility.component.css
+++ b/src/app/main/utility-components/propagator-utility/propagator-utility.component.css
@@ -1,12 +1,20 @@
-rux-container::part(container) {
-  border: none;
+:host {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 header {
   display: flex;
+  align-items: center;
   gap: 0.5rem;
+  padding: var(--spacing-4);
 }
 
 header button {
   margin-inline-start: auto;
+}
+
+rux-tab-panel {
+  height: 100%;
 }
